[package]
name = "solana-secp256k1"
authors = ["Dean Little <@deanmlittle>"]
description = "Efficient, SVM-friendly implementations of common Secp256k1 functions"
license = "MIT"
version = "0.1.2"
edition = "2021"

[lib]

[dependencies]
thiserror = "1.0.53"
dashu = "0.4.2"
solana-nostd-secp256k1-recover = "0.1.1"
solana-program = ">=1.18.0, <2.1.0"

[dev-dependencies]
hex = "0.4.3"