[package]
name = "solana-secp256k1"
authors = ["Dean Little <@deanmlittle>"]
description = "Efficient, SVM-friendly implementations of common Secp256k1 functions"
license = "MIT"
version = "0.1.4"
edition = "2021"

[lib]

[features]
default = []
big-mod-exp = ["solana-nostd-big-mod-exp"]

[dependencies]
dashu = "0.4.2"
solana-nostd-secp256k1-recover = "0.1.1"
solana-nostd-big-mod-exp = { version = "0.1.3", optional = true }

[dev-dependencies]
hex = "0.4.3"